--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
-<!--
-Vytvoř osobní vizitku se:
-
-- jménem,
-- krátkým odstavcem o sobě,
-- odkazem na svůj profil,
-- vlastní fotkou (aby tě lektoři poznali),
-- odkazem na svůj e-mail.
-
-Vizitku ostyluj pomocí CSS:
-
-- Nastav barvu pozadí, popředí
-- Uprav velikost písma, zarovnání textu
-- Přidej si vlastní písmo např. z Google Fonts
-- Další vlastnosti dle vlastního uvážení
-
-Tip: Webdesign In 4 Minutes https://jgthms.com/web-design-in-4-minutes/
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="box">
+    <div class="ramecek">
+    <img src="/LUR_4048e.JPG" alt="Má fotografie" width="200">
+    <h1>Czechitas Veronika</h1>  
+    <p>Ahoj, já jsem Veronika, je mi 28 let a bydlím v Praze. Momentálně jsem na rodičovské dovolené a rozhodla jsem se, že se naučím programovat. Přihlásila jsem se úvodní kurz k CSS a HTML, který mě velmi bavil a tak jsem se přihlásila i na pokračovací kurz. Těším se na nové výzvy, které na mě čekají.</p></div>
+    <ul class="kontakty">
+    <li>
+        <a href="https://www.facebook.com/verca.kotrsova" target="_blank">FACEBOOK</a></li>
+    <li>
+        <a href="mailto:Verka.kokos@seznam.cz" target="_blank">EMAIL</a></li>
+    <li>
+        <a href="https://github.com/Veruuko" target="_blank">GITHUB</a>
+    </li>
+    </ul>
+    </div>
+</body>
+</html>
